tests/negative/gold/pkg_no_src/main_test.gold
<...>/tests/negative/pkg_no_src/package.lock:6:11: error: Package 'nested' at '<...>/tests/negative/pkg_no_src/nested' is missing a 'src' folder
    path: nested
          ^~~~~~
tests/negative/pkg_no_src/main_test.toit:5:8: error: Package 'nested' for prefix 'pre' not found
import pre.no_src as pre
       ^~~
tests/negative/pkg_no_src/main_test.toit:8:13: error: Unresolved identifier: 'foo'
  print pre.foo
            ^~~
Compilation failed.
